--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     <!--Esto es un comentario-->
     <hr>
     <h2> ejemplo de imagen</h2>
-<img src="./img/image.png" alt="davanteeee">
+<img src="./img/image.png" alt="davanteeee" title="imagen de davanteeee" width="500px" >
+<hr>
+<h2>Ejemplo de estilo de parrafo</h2>
+<p style="color: blue;font-size: 10px ; font-family: 'Courier New', Courier, monospace; border: black 5px solid ;"> Texto del parrafo </p>
+<p>Un parrafo es un elemento de bloque </p>
+<a href="#"></a>
+<p>En un parrafo <a href="./contacto.html">El enlace </a>se comporta igual y sigue siendo un elemento en linea</p>
 
 </body>
 </html>
