--- a/Tema 2/index.html
+++ b/Tema 2/index.html
@@ -6,6 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>Voy a copiar el signo de admiracion &#33;</p>
+<hr>
+<h2> Division </h2>
+    <div style = "background-color: aqua">
+        <p> Parrafo 1 del div 1 </p>
+        <p>Parrafo 2 del div 1 </p>
+    </div>
+
+    <div style = "background-color: yellow;">
+        <p>Parrafo 1 del div 2</p>
+        <p> Parrafo 2 del div 2</p>
+    </div>
+    <hr>
+    <h2>Cita larga</h2>
+    <p>Ejemplo de blockquote</p>
+    <blockquote>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    </blockquote>
+
 </body>
 </html>
