--- a/Tema 3 y 4/index.html
+++ b/Tema 3 y 4/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
 
     <h2> Etiqueta span</h2>
-    <p style ="color: red;" Hola soy> <span style="color: blue;">Carlos</span>, profesor de informatica</p>
+    <p style="color: red;" Hola soy> <span style="color: blue;">Carlos</span>, profesor de informatica</p>
+
+    <hr>
+
+    <h2>Etiquetas de texto
+    </h2>
+    <p> <i>texto va en cursiva</i></p>
+    <p>
+        <em>Este texto va en cursiva</em>
+    </p>
+    <p><b>Este texto va en negrita</b></p>
+
+    <p><strong>Este texto va en negrita</strong></p>
+
+
+    <p>2<sup>2</sup></p> 
+    <p>2<sub>2</sub></p> 
+    <p><s>Este texto va tachado</s></p>
+    <p>Camisa roja <small>100% </small>algodón</p>
 </body>
+
 </html>
