--- a/Tema 3 y 4/index.html
+++ b/Tema 3 y 4/index.html
@@ -29,6 +29,9 @@
     <p>2<sub>2</sub></p> 
     <p><s>Este texto va tachado</s></p>
     <p>Camisa roja <small>100% </small>algodón</p>
+    <p>Este texto va <mark>resaltado</mark></p>
+    
+
 </body>
 
 </html>
