--- a/Tema 3 y 4/index.html
+++ b/Tema 3 y 4/index.html
@@ -30,7 +30,12 @@
     <p><s>Este texto va tachado</s></p>
     <p>Camisa roja <small>100% </small>algodón</p>
     <p>Este texto va <mark>resaltado</mark></p>
-    
+
+
+    <hr>
+    <h2>Enlaces</h2>
+
+    <a href="htt://medac.es" target="_blank">Enlace a MEDAC</a> 
 
 </body>
 
