--- a/Tema 3 y 4/Creación de una Página Web Personal Completa en HTML/index.html
+++ b/Tema 3 y 4/Creación de una Página Web Personal Completa en HTML/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Alejandro Casado Galisteo">
+    <title>Mi Perfil Profesional</title><meta name ="author" content="Pagina personal creada con HTML">
+    <a href="#Datos personales"></a>
+    <a href="Mis estudios"></a>
 </head>
 <body>
-    
+    <id><h1>Mi perfil Profesional</h1></id>
+    <hr>
+    <h2>Datos personales</h2>
+    <ul>
+        <li><h3>Nombre</h3>Alejandro Casado Galisteo</li>
+        <li><h3>Fecha de cumpleaños</h3>31-01-2001</li>
+        <li><h3>Hobbies favoritos</h3>Jugar videojuegos,ver series</li>
+        <li><h3>Dirección de domicilo</h3>C/Sierrezuela Nº2</li>
+        <li><h3>Localidad</h3>Torredonjimeno (Jaén)</li>
+    </ul>
+    <hr>
+    <h2>Mis estudios</h2>
+    <ul>
+        <li><h3>Estudios secundarios obligatorios</h3>2013-2017</li>
+    </ul>
 </body>
 </html>
