--- a/Tema 3 y 4/Creación de una Página Web Personal Completa en HTML/index.html
+++ b/Tema 3 y 4/Creación de una Página Web Personal Completa en HTML/index.html
@@ -4,24 +4,71 @@
     <meta charset="UTF-8">
     <meta name="description" content="Alejandro Casado Galisteo">
     <title>Mi Perfil Profesional</title><meta name ="author" content="Pagina personal creada con HTML">
-    <a href="#Datos personales"></a>
-    <a href="Mis estudios"></a>
 </head>
+<nav>
+    <!--Navegacion-->
+        <a href="#datos personales">Datos personales</a> |
+        <a href="#mis estudios">Mis estudios</a> |
+        <a href="#mis hobbies e intereses">Mis hobbies e intereses</a> |
+        <a href="#github">Github</a>
+        <a href="#localizacion">Localizacion del centro</a>
+    </nav>
 <body>
-    <id><h1>Mi perfil Profesional</h1></id>
+    <!--Frase de motivacion-->
+    <blockquote>«Tu trabajo va a suponer gran parte de tu vida, y la única forma de estar plenamente satisfecho es creer que se trata de un gran trabajo. El único modo de hacer un gran trabajo es amar lo que haces. Si aún no lo has encontrado, sigue buscando. No te conformes. Como sucede con todos los asuntos del corazón, cuando lo hayas encontrado te darás cuenta». — Steve Jobs</blockquote>
+    <id><p><h1>Mi perfil Profesional</h1></p></id>
     <hr>
-    <h2>Datos personales</h2>
+    <div>
+        <!--Foto de perfil-->
+        <img src="/Tema 3 y 4/Creación de una Página Web Personal Completa en HTML/img/1000004342.jpg" alt="Foto profesional" width="150px" height="150px" >
+
+    </div>
+    <div>
+        <!--Seccion de datos personales-->
+       <p> <h2 id="datos personales">Datos personales</h2></p>
     <ul>
-        <li><h3>Nombre</h3>Alejandro Casado Galisteo</li>
-        <li><h3>Fecha de cumpleaños</h3>31-01-2001</li>
-        <li><h3>Hobbies favoritos</h3>Jugar videojuegos,ver series</li>
-        <li><h3>Dirección de domicilo</h3>C/Sierrezuela Nº2</li>
-        <li><h3>Localidad</h3>Torredonjimeno (Jaén)</li>
+      <p>  <li><h3>Nombre</h3><i> Alejandro Casado Galisteo</i></li></p>
+      <p>  <li><h3>Fecha de cumpleaños</h3>31-01-2001</li></p>
+      <p>  <li><h3>Hobbies favoritos</h3><i>Jugar videojuegos,ver series</i></li></p>
+      <p>  <li><h3>Dirección de domicilo</h3><i>C/Sierrezuela Nº2</i></li></p>
+      <p>  <li><h3>Localidad</h3>Torredonjimeno (Jaén)</li></p>
+    <p>   <li><h3>Código postal</h3>23650</li></p>
     </ul>
+    </div>
     <hr>
-    <h2>Mis estudios</h2>
-    <ul>
-        <li><h3>Estudios secundarios obligatorios</h3>2013-2017</li>
-    </ul>
+    <div>
+        <!--Seccion de estudios-->
+        <h2><p id="mis estudios">Mis estudios</p></h2>
+        
+    <ol>
+        <p><li><h3>Estudios secundarios obligatorios</h3><b>2013-2017</b></li></p>
+        <p> <li><h3>Formacion profesional ciclo medio de sistemas microinformaticos y redes</h3><b>2022-2024</b></li></p>
+        <p><li><h3><mark> Actualmente : realizando ciclo superior de formacion profesional de desarrollo de aplicaciones multiplataformas</mark></h3><ul></p>
+           <p></p> <li><b>Estudios en programacion</b></li></p>
+          <p></p> <li><b>Estudios en Sistemas informaticos</b></li></p>
+           <p></p> <li><b>Estudios en Base de datos</b></li></p>
+           <p></p> <li><b>Estudios en Lenguajes de marcas</b></li></ul></p>
+
+
+    
+    </ol>
+    </div>
+    <hr>
+    <div>
+        <!--Seccion de mis hobbies e intereses-->
+        <h2><p id="mis hobbies e intereses"> Mis hobbies e intereses</p></h2>
+
+        <ul>
+            <b><li>Me gusta la natacion y futbol como deportes</li></b>
+           <b> <li>Jugar videojuegos</li></b>
+           <b> <li>Quedar con mis amigos</li></b>
+           <b> <li>Ver series</li></b>
+           <b> <li>Me interesa leer libros y aprender sobre la informatica</li></b>
+        </ul>
+    </div>
+    <hr>
+    <!--Mapa con localizacion del centro-->
+    <h2 id="localizacion" >Localizacion del centro en mapa</h2>
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3152.655932256349!2d-3.7857313000000277!3d37.798102400000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6dd7dec3dd20ad%3A0x4fad82fdbe189c8!2sDavante%20MEDAC%20Aventura%20%F0%9F%A5%87%20Centro%20FP%20Ja%C3%A9n!5e0!3m2!1ses!2ses!4v1759741269790!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
