--- a/Tema 3 y 4/Creación de una Página Web Personal Completa en HTML/index.html
+++ b/Tema 3 y 4/Creación de una Página Web Personal Completa en HTML/index.html
@@ -68,7 +68,7 @@
     </div>
     <!--Perfil de Github-->
     <h2><p id="github">Mi perfil de Github</p></h2>
-    <p a href="https://github.com/zetinia" target="_blank"></p>
+     <a href=https://github.com/zetinia target="_blank"> Mi perfil de Github</a>
     <!--Mapa con localizacion del centro-->
     <h2 id="localizacion" >Localizacion del centro en mapa</h2>
      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3152.655932256349!2d-3.7857313000000277!3d37.798102400000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6dd7dec3dd20ad%3A0x4fad82fdbe189c8!2sDavante%20MEDAC%20Aventura%20%F0%9F%A5%87%20Centro%20FP%20Ja%C3%A9n!5e0!3m2!1ses!2ses!4v1759741269790!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
