--- a/Tema 3 y 4/Creación de una Página Web Personal Completa en HTML/index.html
+++ b/Tema 3 y 4/Creación de una Página Web Personal Completa en HTML/index.html
@@ -20,7 +20,7 @@
     <hr>
     <div>
         <!--Foto de perfil-->
-        <img src="/Tema 3 y 4/Creación de una Página Web Personal Completa en HTML/img/1000004342.jpg" alt="Foto profesional" width="150px" height="150px" >
+        <img src= "img/1000004342.jpg" alt="Foto profesional" width="150px" height="150px" >
 
     </div>
     <div>
