--- a/Tema 3 y 4/Creación de una Página Web Personal Completa en HTML/index.html
+++ b/Tema 3 y 4/Creación de una Página Web Personal Completa en HTML/index.html
@@ -69,7 +69,7 @@
     <hr>
     <!--Perfil de Github-->
     <h2><p id="github">Mi perfil de Github</p></h2>
-     <a href=https://github.com/zetinia target="_blank"> Mi perfil de Github</a>
+     <a href=https://github.com/zetinia/1DAM_LMSGI_acg/tree/main/Tema%203%20y%204/Creaci%C3%B3n%20de%20una%20P%C3%A1gina%20Web%20Personal%20Completa%20en%20HTML target="_blank">Repositorio del trabajo</a>
      <hr>
     <!--Mapa con localizacion del centro-->
     <h2 id="localizacion" >Localizacion del centro en mapa</h2>
