--- a/Tema 5/Trabajo horario y formulario de la pag web curriculum/Formulario.html
+++ b/Tema 5/Trabajo horario y formulario de la pag web curriculum/Formulario.html
@@ -6,6 +6,53 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <form action="proceso.php" method="post"></form>
+
+    <fieldset>
+        <legend>Datos Personales</legend>
+        <p>Nombre: <input type="text"></p>
+        <p>Apellidos: <input type="text"></p>
+        <p>Edad: <input type="number" size="10"></p>
+
+        <p>
+            <input type="radio" name="sexo" value="h">Hombre
+            <input type="radio" name="sexo" value="m">Mujer
+        </p>
+
+    </fieldset>
+    <fieldset>
+        <legend>Contacto</legend>
+        <p>
+           <p> Correo Electronico<input type="email"></p>
+           <p> Código Postal <input type="number"></p>
+           <p> Dirección <input type="text"></p>
+           <p> Ciudad <select name="opciones" id ="1">
+            <p>Ciudades de España</p></p>
+           <p> <option value="1">Jaén</option></p>
+           <p> <option value="2">Granada</option></p>
+            <p><option value="3">Sevilla</option></p>
+           <p> <option value="4">Madrid</option></p>
+           <p> <option value="5">Segobia</option></p>
+            </select></p>
+            <p> Contraseña<input type="password" required></p>
+    </fieldset>
+    <fieldset>
+        <legend>Datos de Interés</legend>
+        <p>Estado civil:</p>
+        <input type="radio" name="estado civil" value="c">Casado
+        <input type="radio" name="estado civil" value="nc">No casado
+        <p>Hobbies: </p>
+        <input type="checkbox" name="opcion1">Jugar videojuegos<br>
+        <input type="checkbox" name="opcion2">Leer libros<br>
+        <input type="checkbox" name="opcion2">Salir con los amigos<br>
+        <input type="checkbox" name="opcion2">Ciclismo<br>
+        <input type="checkbox" name="opcion2">Ver series<br>
+        
+    </fieldset>
+    <fieldset>
+        <legend>Comentarios Adicionales</legend>
+        <textarea rows="4" cols="50"></textarea>
+    </fieldset>
+
 </body>
 </html>
