--- a/Tema 5/Trabajo horario y formulario de la pag web curriculum/Formulario.html
+++ b/Tema 5/Trabajo horario y formulario de la pag web curriculum/Formulario.html
@@ -51,8 +51,11 @@
     </fieldset>
     <fieldset>
         <legend>Comentarios Adicionales</legend>
-        <textarea rows="4" cols="50"></textarea>
+        <textarea rows="4" cols="50" placeholder="Aqui puedes escribir..."></textarea>
     </fieldset>
+
+<input type="submit" value="Enviar"></input>
+<input type="reset" value="Borrar"><input>
 
 </body>
 </html>
