--- a/Tema 5/Trabajo horario y formulario de la pag web curriculum/Horario.html
+++ b/Tema 5/Trabajo horario y formulario de la pag web curriculum/Horario.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horario</title>
+    <!--El atributo rowspan sirve para hacer conjuntos de celdas de manera vertical y el atributo colspan para poder conbinarlas de forma horizontal y los aplique en las secciones donde tengo tres horas seguidas de una misma clase utilizando el atributo y poniendo entre comillas la cantidad de celdas que queria combinar-->
+    
+    <!--He utilizado las siguiente etiqueta style para que la tabla, las columnas y filas tengan un borde de 1 px negro y el texto centralizado-->
     <style>
         table,
         th,
@@ -18,6 +21,7 @@
 <body>
     <table>
         <caption>Horario</caption>
+        <!--Utilize la etiqueta thead para poder crear la cabezera del horario, para las horas y los días de la semana-->
         <thead>
             <tr>
                 <th>Horario</th>
@@ -28,6 +32,7 @@
                 <th>Viernes</th>
             </tr>
         </thead>
+        <!--tbody lo utilize ya como el cuerpo de la tabla del horario en el que adentro van las clases-->
         <tbody>
             <tr>
                 <td> 8:30 - 9:30</td>
