--- a/Tema 5/Trabajo horario y formulario de la pag web curriculum/index.html
+++ b/Tema 5/Trabajo horario y formulario de la pag web curriculum/index.html
@@ -12,6 +12,8 @@
         <a href="#mis hobbies e intereses">Mis hobbies e intereses</a> |
         <a href="#github">Mi perfil de Github</a>
         <a href="#localizacion">Localizacion del centro</a>
+        <a href ="Horario.html" target="_blank">Mi horario</a>
+        <a href="Formulario.html"target ="_blank">Formulario</a>
     </nav>
 <body>
     <!--Frase de motivacion-->
