--- a/Tema 6/Index.html
+++ b/Tema 6/Index.html
@@ -9,8 +9,8 @@
 <body>
     <header> <h1>TÍTULO PÁGINA WEB</h1>
        <nav>
-        <a href="formulario">Formulario</a>
-        <a href="multimedia">Multimedia</a>
+        <a href="Formulario.html">Formulario</a>
+        <a href="Multimedia.html">Multimedia</a>
        </nav>
     </header>
     <main></main>
@@ -43,5 +43,11 @@
             </aside>
         </article>
     </section>
+    <footer>
+        <p><b>Avisos legales</b></p>
+       <input type="url" value="https://www.interior.gob.es/opencms/es/politica-de-cookies"name ="url">
+        <p><b>Redes Sociales</b></p>
+        <p><a href="FAQ.html">(Preguntas frecuentes)</a></p>
+    </footer>
 </body>
 </html>
