--- a/Tema 6/Multimedia.html
+++ b/Tema 6/Multimedia.html
@@ -17,7 +17,7 @@
     
     <h1>Video de la loteria</h1>
     <video width="384" height="288" controls preload="auto" poster="img/descarga.jpg">
-        <source src="multimedia/pelicula.webm">
+        <source src="multimedia/screen-capture.webm">
     </video>
 
 </body>
