--- a/Tema 7 css/Ejemplo4curriculum.html
+++ b/Tema 7 css/Ejemplo4curriculum.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <p id="titulo"CV de Pedro Martinez Maldonadc ></p>
 </body>
 </html>
