--- a/Tema 7 css/index5.html
+++ b/Tema 7 css/index5.html
@@ -19,6 +19,7 @@
             font-weight: 300;
             font-size: 300%;
             color: red;
+            text-decoration:solid;
         }
     </style>
 </head>
