--- a/Tema 7 css/index7.html
+++ b/Tema 7 css/index7.html
@@ -41,6 +41,30 @@
     </style>
 </head>
 <body>
+    <div id="viaje">
+        <h1 id="apartado1">DIA 2: VACACIONES EN ROMA</h1>
+
+        <h2 class="apartado2">Ciudad Origen - 
+            Ciudad Destino</h2>
+    </div>
+    <p class="contenido">
+        <b>Origen:</b>Florencia<br>
+        <b>Destino:</b>Roma
+
+    </p>
+    <h2 class="apartado2">Horario</h2>
+    <p class="contenido">
+
+        <b>Hora de salida:</b> 8:00 horas <br>
+        <b>Hora de llegada:</b> 19:00 horas</li>
+
+    </p>
+    <h2 class="apartado2">Visita</h2>
+    <p class="contenido">
+        SUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUU<b>dasdasdsadas</b>
+
+
+    </p>
     
 </body>
 </html>
