--- a/Tema 9/index.html
+++ b/Tema 9/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css"
+    href="css/style.css">
 </head>
 <body>
-    
+    <nav>
+    <ul>
+        <li><a href="#home">Inicio</a></li>
+        <li><a href="#news">Novedades</a></li>
+        <li><a href="#contact">Contactos</a></li>
+        <li class="especial">
+            <a href="#about">Acerca de </a>
+            <a href="#ejemplos">Ejemplos</a>
+        </li>
+    </ul>
+    </nav>
 </body>
 </html>
